# APEX-2.0

./: .env.example  .gitignore  README.md  check_json.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt
agents/: base_agent.py
agents/cost_orchestrator/: agent.py  models.py  router.py
agents/meta_orchestrator/: agent.py  coordinator.py  environment.py  memory.py
agents/production_readiness/: agent.py  risk_scoring.py  survival_models.py  validators.py
agents/query_intelligence/: agent.py  environment.py  training.py
api/: main.py
assets/: .gitkeep
demo/: demo_data.json  video_script.md
docs/: agent_architecture.md  azure_architecture.md  cv_architecture.md  env_setup_guide.md  foundry_architecture.md  frontend_guide.md  mcp_architecture.md  production_readiness.md  production_validation.md  rl_architecture.md  security_compliance.md
examples/: agent_collaboration_demo.py  complete_architecture_demo.py
frontend/: package-lock.json  package.json  tailwind.config.js
integrations/: agent_framework.py  azure_monitor.py  cosmos_db.py  microsoft_foundry.py  opentelemetry_config.py
mcp_servers/: alert_server.py  azure_monitor_server.py  base_server.py  cost_management_server.py  database_server.py  foundry_server.py  registry.py
scripts/: fix_assets.py  generate_synthetic_data.py  move_generated_assets.py  production_simulation.py  setup_azure.sh  train_agents.py  train_cv_models.py
shared/: agent_interfaces.py  foundry_api.json  mcp_schemas.json
tests/: test_foundry_integration.py  test_mcp_servers.py  test_vision_agent.py
(+21 files in other folders)
